--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -1,3 +1,4 @@
+
 /* #region Table of Content */
                                                                                                                                                                                                                         /*    
                                           Four-Wins-Online Main-CSS-Stylsheet
@@ -60,9 +61,9 @@
 /* #region 1) General */                                                                                                                                                                                                                                                                               
 
 :root{
-      /* ================
+      /* ===============
          colour pallete 
-         ================= */
+          ================ */
     
    --prime-blueviolett: hsl(238, 56%, 19%);
    --prime-darkgrey: hsl(330, 2%, 17%);
@@ -83,7 +84,7 @@
    overflow-wrap: break-word;
    word-wrap: break-word;
 
-   overflow: hidden;
+   /*overflow: hidden;*/
 
 }
 
@@ -105,40 +106,43 @@ body{
    justify-content: center;
    align-items: center;
    text-align: center;
+   display: grid;
+   grid: 15vh auto 15vh / 1fr;
 }
+
+      /* =============
+         1. Grid Layer 
+          ============== */ 
+
 
 header{
    border-bottom: solid 1vh var(--base-border);
    border-radius: 1rem;
-   min-height: 15vh;
-   margin-top: 1rem;
+   line-height: 0;
+   display: grid;
+   grid: 1fr 1fr / 1fr;
 }
 
 .Class_MainWrapper{
    display: grid;
-   grid: repeat(1, 1fr) / 30% auto 30%;
+   grid: auto / 30% auto 30%;
    grid-template-areas:
 "leftSide gameboard rightSide";
 }
 
-#ID_Head_Text,
-.Class_Header
-
-
 footer {
-   display: flex;
+   display: grid;
+   grid: 1fr / 1fr 1fr;
    align-content: center;
    align-items: center;
    justify-content: center;
    text-align: center;
+   
 }
 
-#ID_Head_Text{
-      flex-wrap: wrap;
-      min-width: 100%;
-      min-height: 100%;
-      line-height: 0;
-}
+      /* ===================
+         Sidebars Grid Layer 
+          ==================== */ 
 
 .Class_LeftSidebarWrapper{
    grid-area: leftSide;
@@ -150,20 +154,6 @@ footer {
       " . "
       " . "
       ; 
-}
-
-.Class_GameboardWrapper{
-   grid-area: gameboard;
-   display: flex;
-   min-width: 33%;
-   min-height: 63vh;
-   background-color: var(--gameboard);
-   border: solid 1rem var(--gameboard);
-   border-top: dashed .1rem var(--gameboard);
-   border-radius: 2rem;
-   border-top-left-radius: 0;
-   border-top-right-radius: 0;
-   border-top: none;
 }
 
 .Class_RightSidebarWrapper{
@@ -185,15 +175,47 @@ footer {
    grid-area: sidebar;
 }
 
+      /* ===================
+         Gameboard (Grid?) 
+          ==================== */ 
+
+.Class_GameboardWrapper{
+   grid-area: gameboard;
+   display: flex;
+   background-color: var(--gameboard);
+   border: solid 1rem var(--gameboard);
+   border-top: dashed .1rem var(--gameboard);
+   border-radius: 2rem;
+   border-top-left-radius: 0;
+   border-top-right-radius: 0;
+   border-top: none;
+}
+
+.Class_GameboardWrapper[data-inGame="yes"]{
+   position: absolute;
+   bottom: 0;
+   left: 50%;
+   transform: translateX(-50%);
+   aspect-ratio: 1/1;
+   min-height: 70vh;
+}
 
 footer{
-   gap: 2rem;
+   display: grid;
+   grid: 1fr / repeat(8, 1fr);
+   grid-gap: 2rem;
+   
 }
 
 #ID_Choose_KI_Div{
-   line-height: 0;
-   position: relative;
-   top: -1rem;
+   grid-column-start:4;
+   grid-column-end: 5;
+   margin-bottom: 2rem;
+}
+
+#ID_Start_Button{
+   grid-column-start:5;
+   grid-column-end: 6;
 }
 
                                                                                                                                                                                                                                                                /* #endregion */  
@@ -220,9 +242,6 @@ footer{
 
 .Class_Full_Column{
    box-shadow: 0 -5px 0 var(--gameboard);
-   display: flex;
-   align-items:center;
-   justify-content:center;
 }
 
 .Class_Cells{
@@ -239,10 +258,6 @@ footer{
       /* ===============================
          Game Screen Gameboard Classes 
          =============================== */ 
-
-.Class_Main_Wrapper_InGame{
-
-}
 
 .Class_Gameboard_Wrapper_InGame{
    margin-top: 10vh;
@@ -327,10 +342,6 @@ footer{
    height: 90vh;
    width: clamp(270px, 20%, 25vw);    
    line-height: 0;
-}
-
-#ID_Settings_Menu{
-
 }
 
 .Class_Show_Settings{
@@ -468,22 +479,21 @@ to{
 
 /* #region 5) Typographie */    
 
+
+#ID_Headline{
+   text-align: center;
+}
+
+#ID_Header_p{
+}
+
+
 #ID_Player_1_Headline{
    width: 100%
 }
 
 #ID_Player_2_Headline{
    width: 100%
-}
-
-#ID_Headline{
-   min-width: 100%;
-   text-align: center;
-}
-
-#ID_Header_p{
-   min-width: 100%;
-   text-align: center;
 }
 
 #ID_h3_turnText{
@@ -521,14 +531,6 @@ input:focus{
    background-color: var(--prime-darkgrey);
    color: var(--base-border);
    box-shadow: inset 0 0 1rem white;
-}
-
-#ID_Player_1_Name{
-   
-}
-
-#ID_Player_2_Name{
-
 }
 
     /* ============
@@ -975,9 +977,6 @@ background-color: var(--base-border);
 opacity: .7;
 }
 
-.Class_Game_End{
-
-}
 #ID_End_H1{
 min-width: 100%;
 padding-top: 1%;
@@ -1139,11 +1138,6 @@ body {
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;   
-}
-
-.Class_Headline{
- 
-
 }
 
 .Class_HeadlineTop{
