--- a/Folder_CSS/style.css
+++ b/Folder_CSS/style.css
@@ -48,7 +48,7 @@
                                         -) Find a final, real good styling!                                        
                                         -) Find final Folder Layout for CSS-Stylesheets!  
                   
-                                                  Session progress:
+                                                  Session progress:                                                
 -) 
                                                                                                                                                                                                                                                                                        */
 /* #endregion */
@@ -1285,7 +1285,9 @@ select:hover {
 
 /* #endregion */
 
-/* #region 13) Checklist */ /*                                                                                                                                                                                                                                                                                                                           
+/* #region 13) Checklist */ /*                
+
+-) Chrome - Element - Layout - Styles to change CS properties, toggle states, analyze animations etc!
 
 -) VS Studio Terminal hilft bei Tippfehler.
 
